<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sahanadroid</string>
    <string name="txt_main_menu">メインメニュー</string>
    <string name="btnvolunteer">ボランティア</string>
    <string name="txt_project_title">プロジェクト一覧</string>
    <string name="txt_between">〜</string>
    <string name="msg_project_list_wait">プロジェクト一覧取得中…</string>
    <string name="txt_urgent">緊急</string>
    <string name="msg_task_list_wait">タスク一覧取得中…</string>
    <string name="txt_task_title">タスク一覧</string>
    <string name="project_list_empty">プロジェクトが登録されていません。</string>
    <string name="task_list_empty">タスクが登録されていません。</string>
    <string name="btnshelter">避難所一覧</string>
    <string name="btnsetting">設定</string>
    <string name="btncommit">更新</string>
    <string name="btnback">戻る</string>
    <string name="hint_setting_url">接続先URL</string>
    <string name="hint_setting_username">Sahanaのユーザ名</string>
    <string name="hint_setting_password">Sahanaのパスワード</string>
    <string name="error_no_site_url">接続先URLが未入力です。</string>
    <string name="error_no_username">Sahanaのユーザ名が未入力です。</string>
    <string name="error_no_password">Sahanaのユーザ名が未入力です。</string>
    <string name="txt_shelter_title">避難所一覧</string>
    <string name="shelter_list_empty">避難所が登録されていません。</string>
    <string name="txt_capacity_title">収容可能数（最大人数）</string>
    <string name="txt_capacity_format">%d人</string>
    <string name="msg_shelter_list_wait">避難所一覧取得中…</string>
    <string name="error_no_schema_url">接続先に&quot;http://&quot;が付いているか確認して下さい。</string>
    <string name="txt_request_title">支援要請一覧</string>
    <string name="txt_request_empty">支援要請されていません。</string>
    <string name="msg_request_list_wait">支援要請一覧取得中…</string>
    <string name="txt_cancel">キャンセル済</string>
    <string name="btnrequest">支援要請</string>
    <string name="txt_quantity">数量</string>
    <string name="txt_quantity_commit">Quantity Commit</string>
    <string name="txt_quantity_transit">Quantity Transit</string>
    <string name="txt_quantity_fulfil">Quantity Fulfil</string>
    <string name="txt_item_title">物資</string>
    <string name="txt_comment">コメント</string>
    <string name="hint_item_name">物資の番号を入力</string>
    <string name="hint_quantity">数量を入力</string>
    <string name="hint_comment">コメントを入力</string>
    <string name="btn_input">登録</string>
    <string name="txt_request_item_title">救援物資の登録</string>
    <string name="error_no_item">物資の番号が未入力です。</string>
    <string name="error_no_quantity">数量が未入力です。</string>
    <string name="error_miss_quantity">数量は１以上を入力して下さい。</string>
    <string name="msg_update_success">登録しました。</string>
    <string name="msg_request_item_update_wait">救援物資の登録中…</string>
    <string name="msg_update_failure">物資の登録に失敗しました…</string>
</resources>
