<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_setting_url"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editurl" android:hint="@string/hint_setting_url" android:inputType="textUri"></EditText>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_setting_username"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editusername" android:hint="@string/hint_setting_username" android:inputType="textEmailAddress"></EditText>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_setting_password"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_setting_password" android:id="@+id/editpassword" android:inputType="textPassword"></EditText>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:gravity="center">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btncommit" android:text="@string/btncommit" android:onClick="commitClick"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnback" android:text="@string/btnback" android:onClick="backClick"></Button>
    </LinearLayout>
</LinearLayout>
